--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -3458,16 +3458,31 @@ h6 {
   font-size: 0.8em;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS
+*
+*
+*/
+/*////////////////////////////////////////////////////////
+*
+*
+*  HEADER 
+*
+*
+*/
 .cm-background {
   height: 100vh;
   width: 100%;
   background-image: url(../images-slider/wide1.jpg) !important;
   margin: 0;
   padding: 0;
-  line-height: 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  line-height: 0 !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: 50% 50%;
+  background-attachment: fixed !important;
 }
 
 .cm-background h2 {
@@ -3479,6 +3494,18 @@ h6 {
   height: 100%;
 }
 
+.cm-header {
+  height: 95px;
+  display: none;
+}
+
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESFERAS CON PLUS
+*
+*
+*/
 .circle {
   width: 35px;
   height: 35px;
@@ -3736,16 +3763,22 @@ h6 {
   }
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  VIDEO TAPA PLAY 
+*
+*
+*/
 .tapa {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 500px;
   position: absolute;
   background-image: url(../images/bg1-videoelproyecto.jpg);
   background-repeat: no-repeat;
-  background-color: rgba(255, 255, 255, 0.95);
   background-size: cover;
   background-position: center center;
-  top: -18em;
+  top: 0;
   left: 0;
   z-index: 99;
   cursor: pointer;
@@ -3782,15 +3815,23 @@ h6 {
   border: 5px solid rgba(255, 255, 255, 0.5);
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS AL H1 O H2.H1
+*
+*
+*/
 .h1 {
   margin-top: -40px;
-  font-size: 1.6em;
+  font-size: 3em;
 }
 
 .h1 span {
-  font-size: .8em;
+  font-size: .5em;
   padding-bottom: .3em;
   border-bottom: 1px solid #5f5e5e;
+  margin-top: 1em;
   text-transform: uppercase;
 }
 
@@ -3799,10 +3840,64 @@ h2.h1 span {
   margin-bottom: 1.5em;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS PARA ARQUITECTOS
+*
+*
+*/
+#arquitectos {
+  padding-bottom: 0;
+}
+
+.cm-arquitectos {
+  background-color: #f1f1f1 !important;
+  width: 100%;
+  padding: 2.3em 0;
+}
+
+.cm-arquitectos .especial {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cm-arquitectos .especial figure {
+  padding: 1em;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+}
+
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS PARA EL VIDEO
+*
+*
+*/
 .m-video {
   max-height: 85vh;
   overflow: hidden;
   padding-top: .5em;
+  padding-bottom: 0;
+}
+
+.m-video iframe {
+  top: -18%;
 }
 
 .m-video .h1 {
@@ -3811,10 +3906,6 @@ h2.h1 span {
 
 .m-video .h1 span {
   margin-bottom: 1.5em;
-}
-
-.m-video iframe {
-  top: -18%;
 }
 
 .control-video {
@@ -3830,6 +3921,7 @@ h2.h1 span {
   -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
+  margin-bottom: 1.8em;
 }
 
 .control-video span {
@@ -3867,6 +3959,13 @@ h2.h1 span {
   line-height: 1.8em;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS DE LOS SECCION CLASES CM
+*
+*
+*/
 .cm {
   height: 70vh !important;
   width: 100% !important;
@@ -3875,8 +3974,19 @@ h2.h1 span {
   background-size: cover !important;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM INFO
+*
+*
+*/
 .cm-info {
   margin-top: 2.5em;
+}
+
+.cm-info p {
+  margin-bottom: 2em;
 }
 
 .cm-info figure {
@@ -3903,6 +4013,13 @@ h2.h1 span {
   background-image: url(../images/imagen3.jpg);
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM MASTERPLAN
+*
+*
+*/
 .cm.masterplan {
   background-image: url(../images/masterplan.jpg);
   background-position: top center !important;
@@ -3910,23 +4027,130 @@ h2.h1 span {
   overflow: hidden;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM GALERIA
+*
+*
+*/
 .cm.galeria {
   height: auto !important;
   padding-bottom: 0;
+  padding-top: 1.5em;
 }
 
-.cm.ubicacion {
-  background-image: url(../images/subheader-1.jpg);
-  height: 60vh;
+.cm-portfolio {
+  padding-top: 3em;
+  padding-bottom: 2em;
+}
+
+.cm-portfolio figure.cm-small {
+  margin: 0;
+  position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 
-.cm.ubicacion .circle.circle-masterplan[data-position="1"] {
-  right: 1.3em;
+.cm-portfolio figure.cm-small:after {
+  position: absolute;
+  content: "";
+  width: 150%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.6);
+  top: 100%;
+  left: 0;
+}
+
+.cm-portfolio figure.cm-small:hover:after {
+  top: 0;
+  transition: all .5s;
+}
+
+.portfolio-modal {
+  position: fixed;
+  display: none;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.95);
+  z-index: 99999999;
+}
+
+.portfolio-modal figure.cm-portfolio-modal {
+  max-width: 75%;
+}
+
+.portfolio-modal span {
+  position: absolute;
+  font-size: 2em;
+  color: #000;
+  cursor: pointer;
+}
+
+.portfolio-modal span.icon-cerrar {
+  top: 1.1em;
+  right: 1em;
+}
+
+.portfolio-modal span.icon-derecha, .portfolio-modal span.icon-izquierda {
+  top: 50%;
+}
+
+.portfolio-modal span.icon-izquierda {
+  left: 1em;
+}
+
+.portfolio-modal span.icon-derecha {
+  right: 1em;
+}
+
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM UBICACION
+*
+*
+*/
+.cm.ubicacion {
+  background-image: url(../images/bg-mobile-ubicacion.jpg) !important;
+  background-position: center center;
+  height: 60vh;
+  overflow: hidden !important;
+  margin-bottom: 3.5em;
+  position: relative;
+}
+
+.cm.ubicacion .circle-ubicacion {
+  right: 0;
+  left: 0;
+  margin: 0 auto;
   top: 7em;
-  transition: visibility 1s;
+  visibility: visible !important;
   background: #48941f;
   color: white;
+}
+
+.cm.ubicacion .circle-ubicacion:before {
+  content: '';
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  background: rgba(72, 148, 31, 0.4);
+  border-radius: 50%;
+  top: 0;
+  left: -1.1em;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  z-index: -1;
 }
 
 .cm.ubicacion .texto-p {
@@ -3940,20 +4164,19 @@ h2.h1 span {
   margin-top: 0;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM ACCESO
+*
+*
+*/
 .cm.acceso {
   background-image: url(../images/subheader-2.jpg);
   background-repeat: repeat;
   background-position: center center;
   height: 60vh;
   position: relative;
-}
-
-#ubicacion {
-  /*padding: 1em !important;*/
-}
-
-#ubicacion .h1 span {
-  margin-bottom: 0 !important;
 }
 
 .cm.acceso img {
@@ -4000,6 +4223,15 @@ h2.h1 span {
   top: 18em;
 }
 
+.accesos2 {
+  padding-top: .5em;
+  padding-bottom: 0;
+}
+
+.accesos2 hr {
+  border: 1px solid #eee;
+}
+
 @media all and (min-width: 1900px) {
   .cm.acceso img[alt="tren"] {
     top: 12.6em;
@@ -4027,6 +4259,28 @@ h2.h1 span {
   }
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM UBICACION
+*
+*
+*/
+#ubicacion {
+  padding: 5em 0 2.5em 0;
+}
+
+#ubicacion .h1 span {
+  margin-bottom: 0 !important;
+}
+
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM MODAL
+*
+*
+*/
 .cm-modal {
   position: fixed;
   width: 100vw;
@@ -4081,17 +4335,23 @@ h2.h1 span {
   }
 }
 
-#ubicacion {
-  padding: 5em 0 1.5em 0;
-}
-
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS GOOGLE
+*
+*
+*/
 .google {
-  margin: 1.8em auto 5em auto;
+  margin-top: auto;
 }
 
 .google .btn-cm {
   color: white;
   font-size: 1.2em;
+  position: relative;
+  bottom: 0;
+  margin-top: 60%;
 }
 
 .google .btn-cm:hover {
@@ -4100,6 +4360,13 @@ h2.h1 span {
   font-size: 1.2em;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS  MOSTRAT TEXTO
+*
+*
+*/
 .showText {
   background: rgba(255, 255, 255, 0.7);
   padding: 1em 1.5em 2em 1.5em;
@@ -4114,6 +4381,13 @@ h2.h1 span {
   margin: .5em 0;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS BOTONES Y NAVEGADORES
+*
+*
+*/
 .cmBtn {
   position: absolute;
   right: .5em;
@@ -4130,7 +4404,7 @@ h2.h1 span {
 .cm-nav {
   position: relative;
   width: 100%;
-  background: #d9dbd8;
+  background: rgba(229, 230, 227, 0.7);
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -4191,6 +4465,8 @@ h2.h1 span {
 .cm-nav ul li a {
   color: #626262;
   text-decoration: none;
+  font-family: "misolight";
+  font-size: 1.2em;
 }
 
 .cm-nav ul li a:hover {
@@ -4215,11 +4491,41 @@ h2.h1 span {
   color: #48941f;
 }
 
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS CM AMENITIES
+*
+*
+*/
+.amenities {
+  padding: 0;
+  margin-bottom: 1.5em;
+}
+
+.cm.cm-amenities {
+  background-image: url(../images/bg-amenities.jpg);
+  margin-bottom: 3em;
+}
+
+.cm-amenities.info {
+  width: 100;
+  padding: 0;
+  margin-bottom: 3em;
+}
+
+/*////////////////////////////////////////////////////////
+*
+*
+*  ESTILOS PERSONALIZADOS MEDIAS QUERYS
+*
+*
+*/
 @media all and (min-width: 1024px) {
   img[alt='ubicacionSvg'] {
     position: absolute;
     left: 30em;
-    top: 6.5em;
+    top: 8.5em;
   }
   .h1 {
     margin-top: -40px;
@@ -4228,28 +4534,21 @@ h2.h1 span {
   .h1 span {
     font-size: .4em;
   }
-  .cm.ubicacion .circle.circle-masterplan[data-position="1"] {
-    right: 19em;
-    top: 8.5em;
-    transition: visibility 1s;
+  .cm.ubicacion {
+    background-image: url(../images/subheader-1.jpg) !important;
   }
-  .cm.ubicacion .circle.circle-masterplan[data-position="1"]:before {
-    content: '';
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    background: rgba(72, 148, 31, 0.4);
-    border-radius: 50%;
-    top: 0;
-    left: -1.1em;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    z-index: -1;
+  .cm.ubicacion .circle-ubicacion {
+    left: auto;
+    right: 19em !important;
+    top: 8.5em !important;
+    transition: visibility 1s;
   }
   .cm.ubicacion .texto-p {
     padding: 0;
     padding-left: 1em;
+  }
+  .google .btn-cm {
+    margin-top: 25%;
   }
   #mainmenu li.active {
     position: relative;
@@ -4260,13 +4559,13 @@ h2.h1 span {
   #mainmenu li.active:after {
     position: absolute;
     content: "";
-    top: 39px;
+    top: 36px;
     left: 0;
     right: 0;
     margin: 0 auto;
     width: 0;
     height: 0;
-    border-bottom: 15px solid #d9dbd8;
+    border-bottom: 15px solid rgba(229, 230, 227, 0.7);
     border-top: 15px solid transparent;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
@@ -4274,7 +4573,8 @@ h2.h1 span {
 }
 
 @media all and (min-width: 1900px) {
-  .cm.ubicacion .circle.circle-masterplan[data-position="1"] {
+  .cm.ubicacion .circle-ubicacion {
+    left: auto;
     right: 23em;
     top: 17em;
     transition: visibility 1s;
@@ -4285,4 +4585,12 @@ h2.h1 span {
     top: 8em;
     height: 200px;
   }
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.rio-coment {
+  padding-top: 2em;
 }
