--- a/home/css/jpreloader.css
+++ b/home/css/jpreloader.css
@@ -1,5 +1,5 @@
 #jpreOverlay {
-	background-color: #000000;
+	background-color: #ffffff;
 	position:absolute;
 	width:100%;
 	height:100%;
@@ -28,7 +28,7 @@
 }
 
 #jprePercentage {
-	color:#111;
+	color:#eee;
 	z-index:-1;
 	font-family:Arial,Helvetica,sans-serif;
 	text-align:center;
